[project]
name = "biometrics-charts"
version = "0.1.0"
description = "This is a plugin for the biometrics-tracker application.  It produces charts and graphs of biometric readings"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'numpy',
    'matplotlib',
    'pytest',
 ]
keywords = [
    "biometrics-tracker",
    "health",
    "blood pressure",
    "blood sugar",
    "chart"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# ...
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--import-mode=append"
testpaths = [
    "tests",
]




